fix dark mode as default. change name side to extra

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body:-webkit-full-screen {
 .node {
   cursor: pointer;
 }
-.rect-side {
+.rect-extra {
 }
 
 /*Tooltip*/
@@ -173,7 +173,7 @@ body:-webkit-full-screen {
   vertical-align: middle;
 }
 
-.side-node-text-div {
+.extra-node-text-div {
   width: 100%;
   height: 100%;
   display: flex;
@@ -181,7 +181,7 @@ body:-webkit-full-screen {
   align-items: flex-end;
   text-align: center;
 }
-.side-node-text-div span {
+.extra-node-text-div span {
   width: 100%;
   display: inline-block;
   color: black;
@@ -190,7 +190,7 @@ body:-webkit-full-screen {
   vertical-align: middle;
 }
 
-.side-hull-text-div {
+.extra-hull-text-div {
   width: 100%;
   height: 100%;
   display: flex;
@@ -198,7 +198,7 @@ body:-webkit-full-screen {
   align-items: flex-end;
   text-align: center;
 }
-.side-hull-text-div span {
+.extra-hull-text-div span {
   width: 100%;
   display: inline-block;
   color: black;
